...
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Icon(Icons.visibility_off, size: 48, color: Colors.grey),
                    SizedBox(height: 16),
                    Text(
                      'Belum ada film di Watchlist Anda',
                      style: TextStyle(color: Colors.grey),
                    ),
                  ],
                ),
              );
            }
...
